fix spacing

--- a/omn/src/app/profile/pages/date-personale/date-personale.page.scss
+++ b/omn/src/app/profile/pages/date-personale/date-personale.page.scss
@@ -6,6 +6,10 @@ ion-item {
   margin-bottom: rem(10);
 }
 
+ion-content {
+  --padding-top: 43px;
+}
+
 ion-content,
 ion-item {
   --background: var(--app-white-color) !important;
