--- a/omn/src/app/shared/components/sub-page-header/sub-page-header.component.scss
+++ b/omn/src/app/shared/components/sub-page-header/sub-page-header.component.scss
@@ -14,6 +14,3 @@ ion-title {
 ion-toolbar {
   --background: var(--app-white-color) !important;
 }
-ion-header::after {
-  background-image: none;
-}
